nbproject/private/Default-build.log
[ 50%] Building CXX object CMakeFiles/synth.dir/src/lib/src/libsynth.o
In file included from /usr/include/c++/5/chrono:35:0,
                 from /home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:13:
/usr/include/c++/5/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support \
  ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:82:31: error: expected ‘)’ before ‘<’ token
   SoundGeneratorVarHook(atomic<T>* v, T min, T max, string name)
                               ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:89:38: error: ‘atomic’ has not been declared
   SoundGeneratorVarHook(istream &in, atomic<T>* v, T min, T max)
                                      ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:89:44: error: expected ‘,’ or ‘...’ before ‘<’ token
   SoundGeneratorVarHook(istream &in, atomic<T>* v, T min, T max)
                                            ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:109:3: error: ‘atomic’ does not name a type
   atomic<T>* mref;
   ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In constructor ‘SoundGeneratorVarHook<T>::SoundGeneratorVarHook(std::istream&, int)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:91:3: error: class ‘SoundGeneratorVarHook<T>’ does not have any field named ‘mref’
   mref(v), mmin(min), mmax(max) {}
   ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:91:8: error: ‘v’ was not declared in this scope
   mref(v), mmin(min), mmax(max) {}
        ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In member function ‘virtual void SoundGeneratorVarHook<T>::next(float&, float&, float)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:95:27: error: ‘mref’ was not declared in this scope
    float delta = (float)(*mref - mmin)/(float)(mmax-mmin);
                           ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In member function ‘virtual SoundGenerator* SoundGeneratorVarHook<T>::build(std::istream&) const’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:106:45: error: ‘mref’ was not declared in this scope
   { return new SoundGeneratorVarHook<T>(in, mref,mmin, mmax); }
                                             ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In member function ‘virtual void MixerGenerator::next(float&, float&, float)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:486:13: error: ‘generator’ does not name a type
    for(auto generator: generators)
             ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:489:4: error: expected ‘;’ before ‘left’
    left += l / generators.size();
    ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:490:34: error: expected ‘)’ before ‘;’ token
    right += r / generators.size();
                                  ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In constructor ‘EnvelopeSound::EnvelopeSound(std::istream&)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:607:19: error: no matching function for call to ‘std::basic_ifstream<char>::open(std::__cxx11::string&)’
     file.open(name);
                   ^
In file included from /home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:10:0:
/usr/include/c++/5/fstream:595:7: note: candidate: void std::basic_ifstream<_CharT, _Traits>::open(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       open(const char* __s, ios_base::openmode __mode = ios_base::in)
       ^
/usr/include/c++/5/fstream:595:7: note:   no known conversion for argument 1 from ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const char*’
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In static member function ‘static SoundGenerator* SoundGenerator::factory(std::istream&, bool)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1049:21: error: no matching function for call to ‘std::basic_ifstream<char>::basic_ifstream(std::__cxx11::string&)’
   ifstream file(type);
                     ^
In file included from /home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:10:0:
/usr/include/c++/5/fstream:495:7: note: candidate: std::basic_ifstream<_CharT, _Traits>::basic_ifstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]
       basic_ifstream(const char* __s, ios_base::openmode __mode = ios_base::in)
       ^
/usr/include/c++/5/fstream:495:7: note:   no known conversion for argument 1 from ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const char*’
/usr/include/c++/5/fstream:481:7: note: candidate: std::basic_ifstream<_CharT, _Traits>::basic_ifstream() [with _CharT = char; _Traits = std::char_traits<char>]
       basic_ifstream() : __istream_type(), _M_filebuf()
       ^
/usr/include/c++/5/fstream:481:7: note:   candidate expects 0 arguments, 1 provided
/usr/include/c++/5/fstream:455:11: note: candidate: std::basic_ifstream<char>::basic_ifstream(const std::basic_ifstream<char>&)
     class basic_ifstream : public basic_istream<_CharT, _Traits>
           ^
/usr/include/c++/5/fstream:455:11: note:   no known conversion for argument 1 from ‘std::__cxx11::string {aka std::__cxx11::basic_string<char>}’ to ‘const std::basic_ifstream<char>&’
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1103:8: error: ‘it’ does not name a type
   auto it = generators.find(last_type);
        ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1104:7: error: ‘it’ was not declared in this scope
   if (it != generators.end())
       ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1115:9: error: ‘it’ does not name a type
    auto it = defines.find(last_type);
         ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp: In function ‘void audioCallback(void*, Uint8*, int)’:
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1184:12: error: ‘generator’ does not name a type
   for(auto generator: list_generator)
            ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1187:3: error: expected ‘;’ before ‘stream’
   stream[i] = 32767 * left / list_generator.size();
   ^
/home/hsaturn/Projets/C++/synth/src/lib/src/libsynth.cpp:1188:54: error: expected ‘)’ before ‘;’ token
   stream[i+1] = 32767 * right / list_generator.size();
                                                      ^
CMakeFiles/synth.dir/build.make:62 : la recette pour la cible « CMakeFiles/synth.dir/src/lib/src/libsynth.o » a échouée
make[2]: *** [CMakeFiles/synth.dir/src/lib/src/libsynth.o] Erreur 1
CMakeFiles/Makefile2:67 : la recette pour la cible « CMakeFiles/synth.dir/all » a échouée
make[1]: *** [CMakeFiles/synth.dir/all] Erreur 2
Makefile:127 : la recette pour la cible « all » a échouée
make: *** [all] Erreur 2
